Add Initial Details screen

--- a/app/src/main/res/navigation/gallery_nav_graph.xml
+++ b/app/src/main/res/navigation/gallery_nav_graph.xml
@@ -9,5 +9,13 @@
         android:id="@+id/galleryFragment"
         android:name="com.example.galleryviewer.ui.gallery.fragment.GalleryFragment"
         android:label="fragment_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_gallery">
+        <action
+            android:id="@+id/galleryFragmentToGalleryDetailsAction"
+            app:destination="@id/detailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.example.galleryviewer.ui.details.fragment.DetailsFragment"
+        android:label="DetailsFragment" />
 </navigation>
