--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -20,6 +20,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="2"
             tools:listitem="@layout/item_gallery"
-            app:bindGallery="@{viewModel.gallery}"/>
+            app:bindGallery="@{viewModel.gallery}"
+            app:onItemClickListener="@{viewModel.onItemClickListener}"/>
     </FrameLayout>
 </layout>
